--- a/pytest.ini
+++ b/pytest.ini
@@ -2,6 +2,7 @@
 python_files = */tests/*/test_*.py */tests/test_*.py
 python_classes = Test
 filterwarnings =
+    ignore::DeprecationWarning
     ignore:.*transport=WSGITransport.*:DeprecationWarning
 env =
-  APP_ENVIRONMENT = test
+  ENVIRONMENT = test
