--- a/note/Dockerfile
+++ b/note/Dockerfile
@@ -1,3 +1,7 @@
 FROM ghcr.io/huggingface/text-generation-inference:2.0
 
 RUN pip install --upgrade "transformers==4.40.0"
+
+RUN pip install jupyter
+
+RUN pip install langchain
